--- a/frontend/calender-app/src/app/calender/calender.component.html
+++ b/frontend/calender-app/src/app/calender/calender.component.html
@@ -1,3 +1,16 @@
+<div class="col-md-12">
+
+
+
+
+
+
+</div>
+
+
+
+
+
 <table>
   <tbody>
   <tr *ngFor="let termin of termine">
@@ -11,9 +24,3 @@
 
 </table>
 
-
-{{test}}
-
-<h1 [innerText]="titel"></h1>
-
-<img [src]="link">
