--- a/frontend/vanilla-frontend/view.css
+++ b/frontend/vanilla-frontend/view.css
@@ -12,6 +12,10 @@ body {
     max-width: 600px;
 }
 
+#content{
+    display: flex;
+}
+
 .month {
     padding: 70px 25px;
     width: 100%;
@@ -38,7 +42,6 @@ body {
 #weekdays {
     margin: 0;
     width: 170px;
-
     background-color: #ddd;
     float: left;
 }
@@ -54,7 +57,6 @@ body {
     background: #eee;
     margin: 0;
     width: 280px;
-    float: left;
 }
 
 #days li {
@@ -65,20 +67,31 @@ body {
     border: 1px solid #ccc;;
     max-width: 990px;
     height: 60px;
-}
+  }
 
 
 #user1 {
     background: #eee;
     margin: 0;
     width: 680px;
-
 }
 
 #user2 {
     background: #eee;
     margin: 0;
-    width: 980px;
+    width: 680px;
+}
+
+#user3 {
+    background: #eee;
+    margin: 0;
+    width: 680px;
+}
+
+#user4 {
+    background: #eee;
+    margin: 0;
+    width: 680px;
 }
 
 #user1 li {
@@ -89,9 +102,7 @@ body {
     border: 1px solid #ccc;;
     max-width: 1090px;
     height: 60px;
-    float: left;
 }
-
 
 
 #user2 li {
@@ -102,7 +113,26 @@ body {
     border: 1px solid #ccc;;
     max-width: 1090px;
     height: 60px;
-    margin-left: 20px;
+}
+
+#user3 li {
+    list-style-type: none;
+    text-align: center;
+    font-size: 16px;
+    color: #777;
+    border: 1px solid #ccc;;
+    max-width: 1090px;
+    height: 60px;
+}
+
+#user4 li {
+    list-style-type: none;
+    text-align: center;
+    font-size: 16px;
+    color: #777;
+    border: 1px solid #ccc;;
+    max-width: 1090px;
+    height: 60px;
 }
 
 #days li.active {
