--- a/calenderView/css/view.css
+++ b/calenderView/css/view.css
@@ -160,6 +160,31 @@ body {
     cursor: pointer;
 }
 
+.modal {
+    z-index: 99;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0,0,0, 0.5);
+
+    display: grid;
+    grid-template-columns: 1fr 484px 1fr;
+    grid-template-rows: 1fr auto 1fr;
+}
+
+.panel {
+    background: white;
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.hide{
+    display: none;
+}
+
+
 /* Add media queries for smaller screens */
 @media screen and (max-width: 720px) {
     .weekdays li,
@@ -177,6 +202,7 @@ body {
         padding: 2px;
     }
 }
+
 
 
 
