--- a/calenderView/src/calendar/main.css
+++ b/calenderView/src/calendar/main.css
@@ -16,7 +16,7 @@ ul{
 
 body {
     font-family: Verdana, sans-serif;
-    background-image: url("images/background4.jpg");
+    background-image: url("css/images/background4.jpg");
     background-color: #cccccc;
 }
 
