--- a/calenderView/src/calendar/css/main.css
+++ b/calenderView/src/calendar/css/main.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 li {
@@ -25,7 +26,7 @@ body {
 }
 
 #month{
-    cursor: pointer;
+
 }
 
 #content{
@@ -167,16 +168,47 @@ button {
     bottom: 0;
     background: rgba(0,0,0, 0.5);
     display: grid;
-    grid-template-columns: 1fr 484px 1fr;
+    grid-template-columns: 1fr auto 1fr;
     grid-template-rows: 1fr auto 1fr;
 }
 
 .panel {
-    background: white;
+    color: white;
+    background: #008CBA;
     grid-column: 2;
     grid-row: 2;
+    padding: 1rem;
+    border: solid 2px white;
+    border-radius: 8px;
 }
 
+.panelContent div{
+
+}
+
+.panelContent label{
+    margin-right: 1rem;
+}
+.panelContent input{
+    margin-left: 1rem;
+}
+
+.panelContent input[type=button]{
+    margin-left: 0;
+    border-radius: 8px;
+    border: solid 1px white;
+
+
+}
+
+.panelContent div {
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+.right{
+float: right;
+}
 .hide{
     display: none;
 }
