--- a/calenderView/src/calendar/css/main.css
+++ b/calenderView/src/calendar/css/main.css
@@ -39,6 +39,9 @@ body {
     font-size: 20px;
     font-weight: bold;
     border: 1px solid #ccc;;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .month ul {
@@ -89,7 +92,7 @@ body {
 
 
 #username1, #username2, #username3, #username4 {
-    width: 280px;
+    width: 380px;
     margin-left: 150px;
 }
 
@@ -131,7 +134,12 @@ body {
     color: white;
     font-size: 20px;
     font-weight: bold;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 7vmax;
 }
+
+
 
 #placehoder {
     padding-left: 20px;
@@ -169,6 +177,12 @@ button {
     display: grid;
     grid-template-columns: 1fr 484px 1fr;
     grid-template-rows: 1fr auto 1fr;
+}
+
+#entryButton {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 5vmax;
 }
 
 .panel {
