remove calender verschoben
remove calender ist nicht wirklich ein calender service gehört zum body

--- a/calenderView/src/calendar/css/main.css
+++ b/calenderView/src/calendar/css/main.css
@@ -233,9 +233,16 @@ input[type=button]{
     padding: 0.5rem;
 }
 
+.titel{
+    text-align: center;
+    font-weight: bold;
+
+}
+
 .right{
 float: right;
 }
+
 .hide{
     display: none;
 }
