--- a/calenderView/src/calendar/css/main.css
+++ b/calenderView/src/calendar/css/main.css
@@ -92,17 +92,17 @@ body {
 }
 
 
-#username1, #username2, #username3, #username4 {
+#username1, #username2, #username3, #username4, #username5 {
     width: 380px;
     margin-left: 150px;
 }
 
-#user1, #user2, #user3, #user4 {
+#user1, #user2, #user3, #user4, #user5 {
     margin: 0;
     width: 680px;
 }
 
-#user1 li, #user2 li, #user3 li, #user4 li {
+#user1 li, #user2 li, #user3 li, #user4 li, #user5 li {
     list-style-type: none;
     text-align: center;
     font-size: 16px;
@@ -262,7 +262,7 @@ float: right;
 /* Add media queries for smaller screens */
 @media screen and (max-width: 768px) {
 
-    #days li, .weekdays li, #user1 li, #user2 li, #user3 li, #user4 li{
+    #days li, .weekdays li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 li{
         font-size: 13px;
         width: 100px;
 
@@ -273,7 +273,7 @@ float: right;
         padding: 2px;
     }
 
-    #placeholder, #username1, #username2, #username3, #username4 {
+    #placeholder, #username1, #username2, #username3, #username4, #username5 {
         width: 120px;
         margin-left: 20px;
         font-size: 15px;
@@ -291,7 +291,7 @@ float: right;
         padding: 2px;
     }
 
-    #placeholder, #username1, #username2, #username3, #username4 {
+    #placeholder, #username1, #username2, #username3, #username4, username5 {
         width: 150px;
         margin-left: 10px;
         font-size: 10px;
@@ -301,7 +301,7 @@ float: right;
         height: 50%;
     }
 
-    #days li, #user1 li, #user2 li, #user3 li, #user4 li {
+    #days li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 {
         list-style-type: none;
         text-align: center;
         font-size: 10px;
