--- a/calenderView/src/calendar/css/main.css
+++ b/calenderView/src/calendar/css/main.css
@@ -7,40 +7,31 @@ li{
     margin: 10px
 }
 
-
 ul{
     padding-left: 0px;
     width: content-box;
 }
 
-
 body{
     font-family: Verdana, sans-serif;
-    background-image: url("images/background4.jpg");
+    /*background-image: url("images/background4.jpg");*/
     background-color: #cccccc;
 }
-
 
 #year{
     visibility: hidden;
 }
 
-#month{
-}
-
-#content{
-    display: flex;
-}
 .header{
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     border: 1px solid #ccc;
 }
+
 .month {
     padding: 30px 25px 0 25px;
     text-align: center;
-    font-size: 20px;
     font-weight: bold;
     background-color: #034F8A;
 }
@@ -60,6 +51,10 @@ body{
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 3px;
+}
+
+#content{
+    display: flex;
 }
 
 #weekdays {
@@ -93,7 +88,7 @@ body{
 
 #alert{
     color: khaki;
-        }
+}
 
 #username1, #username2, #username3, #username4, #username5 {
     margin: 0 10px 0 10px;
@@ -119,7 +114,6 @@ body{
     box-shadow: 5px 5px #000066;
 }
 
-
 #days li.weekend {
     background: #888A0A;
     color: white !important;
@@ -130,7 +124,6 @@ body{
     color: white !important;
     border: solid #1986D7;
 }
-
 
 #usernames {
     display: flex;
@@ -146,8 +139,6 @@ body{
     text-align: center;
 }
 
-
-
 #placeholder {
     margin: 0 40px 0 40px;
     }
@@ -160,16 +151,10 @@ body{
     margin-right: 2rem;
 }
 
-
-
-
-button {
+.button {
     border-radius: 8px;
-
     margin: 3px;
-
 }
-
 
 #next,
 #prev {
@@ -181,10 +166,6 @@ button {
     background-color: #034F8A;
 }
 
-.settings span{
-    color: white;
-    margin: 5px 0 5px 0;
-}
 .settings input{
     margin: 5px;
 }
@@ -210,10 +191,6 @@ button {
     padding: 1rem;
     border: solid 2px white;
     border-radius: 8px;
-}
-
-.panelContent div{
-
 }
 
 .panelContent label{
@@ -263,53 +240,217 @@ float: right;
 
 
 /* Add media queries for smaller screens */
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {*/
+/*    body{*/
+/*        background-color: green;*/
 
-    #days li, .weekdays li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 li{
-        font-size: 13px;
-        width: 100px;
+/*    }*/
 
+/*    #days li, .weekdays li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 li{*/
+/*        font-size: 13px;*/
+/*        width: 100px;*/
+
+/*    }*/
+
+
+/*    #days li .active {*/
+/*        padding: 2px;*/
+/*    }*/
+
+/*    #placeholder, #username1, #username2, #username3, #username4, #username5 {*/
+/*        width: 120px;*/
+/*        margin-left: 20px;*/
+/*        font-size: 15px;*/
+/*    }*/
+/*}*/
+
+/*@media screen and (max-width: 420px) {*/
+/*    body{*/
+/*        background-color: blue;*/
+
+/*    }*/
+
+/*    #days li {*/
+/*        font-size: 10px;*/
+/*    }*/
+
+
+/*    #days li .active {*/
+/*        padding: 2px;*/
+/*    }*/
+
+/*    #placeholder, #username1, #username2, #username3, #username4, #username5 {*/
+/*        width: 150px;*/
+/*        margin-left: 10px;*/
+/*        font-size: 10px;*/
+/*    }*/
+
+/*    #usernames{*/
+/*        height: 50%;*/
+/*    }*/
+
+/*    #days li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 li {*/
+/*        list-style-type: none;*/
+/*        text-align: center;*/
+/*        font-size: 10px;*/
+/*        color: black;*/
+/*        border: 1px solid black;;*/
+/*        width: 20px;*/
+/*    }*/
+/*}*/
+@media screen and (max-width: 360px) {
+    body{
+        background-color: red;
     }
 
-
-    #days li .active {
-        padding: 2px;
+    li{
+        margin: 2px
     }
 
-    #placeholder, #username1, #username2, #username3, #username4, #username5 {
-        width: 120px;
-        margin-left: 20px;
-        font-size: 15px;
+    ul{
+        padding-left: 0px;
+        width: content-box;
     }
-}
 
-@media screen and (max-width: 420px) {
+    .header{
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        border: 1px solid #ccc;
+        min-width: 402px;
+    }
+
+    .month {
+        padding: 10px 5px 0 5px;
+        text-align: center;
+        font-weight: bold;
+        background-color: #034F8A;
+    }
+
+    .month ul {
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .month ul li {
+        margin: 0 10px;
+        padding: 0 10px;
+        color: white;
+        font-size: 10px;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
+
+    #content{
+        display: flex;
+    }
+
+    #weekdays {
+        margin: 0;
+        width: 70px;
+        background-color: brown;
+        float: left;
+    }
+
+    #weekdays li {
+        color: black;
+        text-align: center;
+        height: 60px;
+        border: 1px solid #ccc;;
+    }
+
+    #days {
+        margin: 0;
+    }
 
     #days li {
-        font-size: 10px;
-    }
-
-
-    #days li .active {
-        padding: 2px;
-    }
-
-    #placeholder, #username1, #username2, #username3, #username4, #username5 {
-        width: 150px;
-        margin-left: 10px;
-        font-size: 10px;
-    }
-
-    #usernames{
-        height: 50%;
-    }
-
-    #days li, #user1 li, #user2 li, #user3 li, #user4 li, #user5 {
         list-style-type: none;
         text-align: center;
-        font-size: 10px;
+        font-size: 8px;
+        width: 55px;
+        color: white;
+        border: 1px solid #ccc;;
+        height: 40px;
+        padding: 5px;
+        background-color: #1986D7;
+    }
+
+    #alert{
+        color: khaki;
+    }
+
+    #username1, #username2, #username3, #username4, #username5 {
+        margin: 0 10px 0 10px;
+        width: 680px;
+    }
+
+    #user1, #user2, #user3, #user4, #user5 {
+        margin: 0;
+        width: 680px;
+    }
+
+    #user1 li, #user2 li, #user3 li, #user4 li, #user5 li {
+        list-style-type: none;
+        text-align: center;
+        font-size: 9px;
         color: black;
         border: 1px solid black;;
-        width: 20px;
+        width: 65px;
+        height: 40px;
+        overflow: auto;
+        background-color: lightyellow;
+        padding: 5px;
+        box-shadow: none;
+    }
+
+    #days li.weekend {
+        background: #888A0A;
+        color: white !important;
+    }
+
+    #days li.active {
+        background: #D6342F;
+        color: white !important;
+        border: solid #1986D7;
+    }
+
+    #usernames {
+        display: flex;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        color: white;
+        font-size: 10px;
+        font-weight: bold;
+        background-color: #1986D7;
+    }
+
+    #usernames span{
+        text-align: center;
+    }
+
+    #placeholder {
+        margin: 0 10px 0 10px;
+    }
+
+
+
+    #delMod {
+        margin-right: 2rem;
+    }
+
+    .button {
+        font-size: 9px;
+    }
+
+    input[type=button]{
+        font-size: 10px;
+    }
+
+    .footer {
+        font-size: 10px;
     }
 }
+
